Changed picture container max size to avoid overflow

--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ ion-icon {
 }
 
 img {
-  max-width: 100%;
+  max-width: min(500px, 100%);
   height: auto;
 }
 
